--- a/src/main/resources/dart2-v3template/api.mustache
+++ b/src/main/resources/dart2-v3template/api.mustache
@@ -121,7 +121,7 @@ part of {{pubName}}.api;
       // query params
       final queryParams = <QueryParam>[];
       final headerParams = <String, String>{}..addAll(options?.headers?.cast<String, String>() ?? {});
-      if(headerParams['Accept'] == null) {
+      if(!headerParams.containsKey('Accept')) {
     {{#vendorExtensions.x-dart-produces-json}}
         // we only want to accept this format as we can parse it
         headerParams['Accept'] = 'application/json';
@@ -144,7 +144,7 @@ part of {{pubName}}.api;
       {{/required}}
     {{/queryParams}}
     {{#headerParams}}
-        headerParams['{{baseName}}'] = {{paramName}};
+        headerParams['{{baseName}}'] = {{paramName}} ?? '';
     {{/headerParams}}
 
       final authNames = <String>[{{#authMethods}}'{{name}}'{{^-last}}, {{/-last}}{{/authMethods}}];
@@ -173,7 +173,7 @@ part of {{pubName}}.api;
       {{/bodyParam}}
     {{/vendorExtensions.x-dart-consumes-json}}
     {{#vendorExtensions.x-dart-consumes-form}}
-        if (headerParams['Content-Type'] == null) {
+        if (!headerParams.containsKey('Content-Type')) {
         headerParams['Content-Type'] = 'application/x-www-form-urlencoded';
         }
       {{#hasFormParams}}
@@ -194,7 +194,7 @@ part of {{pubName}}.api;
       {{^hasFormParams}}Object postBody = null;{{/hasFormParams}}
     {{/vendorExtensions.x-dart-consumes-form}}
     {{#vendorExtensions.x-dart-consumes-multipartform}}
-        if (headerParams['Content-Type'] == null) {
+        if (headerParams.containsKey('Content-Type')) {
         headerParams['Content-Type'] = 'multipart/form-data';
         }
       {{#hasFormParams}}
@@ -218,6 +218,7 @@ part of {{pubName}}.api;
       {{^hasFormParams}}final postBody = null;{{/hasFormParams}}
     {{/vendorExtensions.x-dart-consumes-multipartform}}
 
+      headerParams.removeWhere((key, value) => value.isEmpty); // remove empty headers
       opt.headers = headerParams;
       opt.method = '{{httpMethod}}';
 
