--- a/src/main/resources/dart2-v3template/pubspec.mustache
+++ b/src/main/resources/dart2-v3template/pubspec.mustache
@@ -34,6 +34,7 @@ dependencies:
   {{/x-dart-deps}}
 dev_dependencies:
   test: ^1.3.0
+  analyzer: ^0.40.7
 {{#x-dart-devdeps}}
   {{{.}}}
 {{/x-dart-devdeps}}
