Added tests for 2d array generation Fixed 2d array generation for no null safety mode

--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -20,7 +20,7 @@
     {{/isModel}}
     {{#isPrimitiveType}}
       {{^nullSafe}}
-          data?.cast<{{{dataType}}}>()
+          (data as List<dynamic>)?.cast<{{{dataType}}}>()
       {{/nullSafe}}
       {{#nullSafe}}
           (data as List<dynamic>?)?.cast<{{{dataType}}}>() ?? <{{{dataType}}}>[]
