Fix for generation of null-safe 2d arrays (#66)
* Added test case for 2d array

* Added return statement and arg type to array copy closure

* Better type casting for primitives in array
Added missing return statement for 2d array from json

* Added tests for 2d array generation
Fixed 2d array generation for no null safety mode

--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -1,6 +1,6 @@
 {{#items}}
   {{#isArray}}
-    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
+    (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { return ((dynamic data) { return {{>_from_json}};})(data); }).toList()
   {{/isArray}}
   {{#isMap}}
     (data as List<dynamic>){{#nullSafe}}.fromNull(){{/nullSafe}}.map((data) { ((dynamic data) { return {{>_from_json}};})(data); }).toList()
@@ -19,7 +19,12 @@
       {{complexType}}.listFromJson(data)
     {{/isModel}}
     {{#isPrimitiveType}}
-      data?.cast<{{{dataType}}}>()
+      {{^nullSafe}}
+          (data as List<dynamic>)?.cast<{{{dataType}}}>()
+      {{/nullSafe}}
+      {{#nullSafe}}
+          (data as List<dynamic>?)?.cast<{{{dataType}}}>() ?? <{{{dataType}}}>[]
+      {{/nullSafe}}
     {{/isPrimitiveType}}
   {{/items}}
 {{/items}}
