Query Parameters for unencoded date/times
DateTimes and Dates in Query parameters should not be url encoded
as Dio is also doing this, which is double encoding them.

5.2.1 of OpenAPI has also introduced some issues.

--- a/src/main/resources/dart2-v3template/_array_from_json.mustache
+++ b/src/main/resources/dart2-v3template/_array_from_json.mustache
@@ -26,5 +26,6 @@
           (data as List<dynamic>?)?.cast<{{{dataType}}}>() ?? <{{{dataType}}}>[]
       {{/nullSafe}}
     {{/isPrimitiveType}}
+    {{#isAnyType}}data{{/isAnyType}}
   {{/items}}
 {{/items}}
