Fixed generating value assignment in toJson() for dynamic fields

--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -109,6 +109,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
         {{#isPrimitiveType}}
           json[r'{{baseName}}'] = {{{name}}};
         {{/isPrimitiveType}}
+        {{#isAnyType}}
+          json[r'{{baseName}}'] = {{{name}}};
+        {{/isAnyType}}
       {{/items}}
       {{^required}}
     } {{#generateNullValuesToJson}}else {
