--- a/src/main/resources/dart2-v3template/_copy_date.mustache
+++ b/src/main/resources/dart2-v3template/_copy_date.mustache
@@ -1,2 +1,2 @@
-{{#vendorExtensions.x-not-nullable}}data.add(Duration()){{/vendorExtensions.x-not-nullable}}
-{{^vendorExtensions.x-not-nullable}}data == null ? null : data.add(Duration()){{/vendorExtensions.x-not-nullable}}
+{{^isNullable}}data.add(Duration()){{/isNullable}}
+{{#isNullable}}data == null ? null : data.add(Duration()){{/isNullable}}
