--- a/src/main/resources/dart2-v3template/class.mustache
+++ b/src/main/resources/dart2-v3template/class.mustache
@@ -1,38 +1,36 @@
 // {{{name}}}
-class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
+class {{{classname}}}{{#parent}} extends {{parent}}{{/parent}} {
 {{#vars}}
   {{^vendorExtensions.x-dart-inherited}}
     {{#description}}/* {{{description}}} */{{/description}}
     {{^allowableValues}}
-      {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}{{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+      {{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
     {{/allowableValues}}
     {{#allowableValues}}
       {{#isEnum}}
-        {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}{{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+        {{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
       {{/isEnum}}
       {{^isEnum}}
         {{^complexType}}
           {{#min}} // range from {{min}} to {{max}}
-          {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}{{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+          {{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
           {{/min}}
-          {{classname}}{{nameInCamelCase}}Enum {{{name}}}{{#defaultValue}} = {{classname}}{{nameInCamelCase}}Enum.{{{defaultValue}}}{{/defaultValue}};
+          {{{classname}}}{{nameInCamelCase}}Enum {{{name}}}{{#defaultValue}} = {{{classname}}}{{nameInCamelCase}}Enum.{{{defaultValue}}}{{/defaultValue}};
         {{/complexType}}
         {{#complexType}}
-          {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}{{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
+          {{{dataType}}} {{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}};
         {{/complexType}}
       {{/isEnum}}
     {{/allowableValues}}
   {{/vendorExtensions.x-dart-inherited}}
 {{/vars}}
 {{^hasVars}}{{^parent}}
-  {{#required}}{{#nullSafe}}late {{/nullSafe}}{{/required}}dynamic{{^required}}{{/required}} json;
+  {{^isNullable}}{{#nullSafe}}late {{/nullSafe}}{{/isNullable}}dynamic json;
 {{/parent}}{{/hasVars}}
-{{classname}}(
+{{{classname}}}(
 {{#hasVars}}{
   {{#vars}}
-    {{#required}}
-      {{#nullSafe}}{{#vendorExtensions.x-dart-required}}required {{/vendorExtensions.x-dart-required}}{{/nullSafe}}
-    {{/required}}
+    {{#nullSafe}}{{#vendorExtensions.x-dart-required}}required {{/vendorExtensions.x-dart-required}}{{/nullSafe}}
     this.{{{name}}}{{#defaultValue}} = {{{defaultValue}}}{{/defaultValue}}{{^-last}}, {{/-last}}
     {{/vars}} }{{/hasVars}}
 )
@@ -41,11 +39,11 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   @override
   String toString() {
-    return '{{classname}}[{{#vars}}{{{name}}}=${{{name}}}, {{/vars}}{{^hasVars}}json=$json{{/hasVars}}]';
+    return '{{{classname}}}[{{#vars}}{{{name}}}=${{{name}}}, {{/vars}}{{^hasVars}}json=$json{{/hasVars}}]';
   }
 
 {{^hasVars}}
-  {{classname}}.fromJson(dynamic rawValue) {
+  {{{classname}}}.fromJson(dynamic rawValue) {
     this.json = rawValue;
   }
 
@@ -54,52 +52,46 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
   }
 
 {{/hasVars}}
-{{#hasVars}}
-  fromJson(Map<String, dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
-    if (json == null) return;
-  {{#parentModel}}{{#hasVars}}super{{/hasVars}}{{^hasVars}}{{classname}}{{/hasVars}}.fromJson(json);{{/parentModel}}
-  {{#nullSafe}}
-    {{#vars}}
-      {{^vendorExtensions.x-var-is-binary}}
-      {{^vendorExtensions.x-dart-inherited}}
-        {{#required}}
-          {
-          final _jsonData = json[r'{{{baseName}}}'];
-          if (_jsonData == null) throw DeserialisationError(json, r'{{{baseName}}}', r'{{{className}}}', '{{{name}}} field is null and is required to have a value');
-          {{#isArray}}{{>_complex_from_json_required}}{{/isArray}}{{#isMap}}{{>_complex_from_json_required}}{{/isMap}}{{^items}}{{>_simple_from_json_required}}{{/items}}
-          }{{/required}}
 
-        {{^required}}{{#isArray}}{{>_complex_from_json}}{{/isArray}}{{#isMap}}{{>_complex_from_json}}{{/isMap}}{{^items}}{{>_simple_from_json}}{{/items}}{{/required}}
-      {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}{{/vars}}
+{{#hasVars}}
+  {{#vars}}
+    static {{{dataType}}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}} fromJson_{{name}}(Map<String, dynamic> json) {
+  {{#nullSafe}}
+      {{^vendorExtensions.x-var-is-binary}}
+        {{^vendorExtensions.x-dart-inherited}}
+          {{^isNullable}}
+            final _jsonData = json[r'{{{baseName}}}'];
+            if (_jsonData == null) throw DeserialisationError(json, r'{{{baseName}}}', r'{{{className}}}', '{{{name}}} field is null and is required to have a value');
+            {{#isArray}}{{>_complex_from_json_required}}{{/isArray}}{{#isMap}}{{>_complex_from_json_required}}{{/isMap}}{{^items}}{{>_simple_from_json_required}}{{/items}}
+            {{/isNullable}}
+
+          {{#isNullable}}{{#isArray}}{{>_complex_from_json}}{{/isArray}}{{#isMap}}{{>_complex_from_json}}{{/isMap}}{{^items}}{{>_simple_from_json}}{{/items}}{{/isNullable}}
+        {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}
   {{/nullSafe}}
   {{^nullSafe}}
-  {{#vars}}
-    {{^vendorExtensions.x-var-is-binary}}
-    {{^vendorExtensions.x-dart-inherited}}
-    {{#isArray}}{{>_complex_from_json}}{{/isArray}}{{#isMap}}{{>_complex_from_json}}{{/isMap}}{{^items}}{{{name}}} = (json[r'{{{baseName}}}'] == null) ? {{#defaultValue}}{{{defaultValue}}}{{/defaultValue}}{{^defaultValue}}null{{/defaultValue}} : {{>_simple_from_json}};{{/items}}
-    {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}{{/vars}}
+      {{^vendorExtensions.x-var-is-binary}}
+        {{^vendorExtensions.x-dart-inherited}}
+          {{#isArray}}{{>_complex_from_json}}{{/isArray}}{{#isMap}}{{>_complex_from_json}}{{/isMap}}{{^items}}{{{name}}} = (json[r'{{{baseName}}}'] == null) ? {{#defaultValue}}{{{defaultValue}}}{{/defaultValue}}{{^defaultValue}}null{{/defaultValue}} : {{>_simple_from_json}};{{/items}}
+        {{/vendorExtensions.x-dart-inherited}}{{/vendorExtensions.x-var-is-binary}}
   {{/nullSafe}}
   }
+  {{/vars}}
 
-  {{classname}}.fromJson(Map<String, dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
-    fromJson(json); // allows child classes to call
-  }
+  {{{classname}}}.fromJson(Map<String, dynamic> json) :
+    {{#vars}}
+      this.{{{name}}} = fromJson_{{name}}(json){{^-last}}, {{/-last}}
+    {{/vars}};
 
   Map<String, dynamic> toJson() {
     final json = {{#parent}}super.toJson();{{/parent}}{{^parent}}<String, dynamic>{};{{/parent}}
     {{#vars}}
       {{^vendorExtensions.x-var-is-binary}}
       {{^vendorExtensions.x-dart-inherited}}
-        {{^required}}
-{{#vendorExtensions.x-ns-default-val}}
-  if ({{{name}}}.isNotEmpty) {
-{{/vendorExtensions.x-ns-default-val}}
-{{^vendorExtensions.x-ns-default-val}}
+        {{#x-dont-tojson-null}}
   if ({{{name}}} != null) {
-{{/vendorExtensions.x-ns-default-val}}
-        {{/required}}
+        {{/x-dont-tojson-null}}
       {{#isArray}}
-        json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/nullSafe}}{{/required}}.map((v) => LocalApiClient.serialize(v)){{^nullSafe}}?{{/nullSafe}}.toList();
+        json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}{{^vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/nullSafe}}{{/isNullable}}.map((v) => LocalApiClient.serialize(v)){{^nullSafe}}?{{/nullSafe}}.toList();
       {{/isArray}}
       {{#isMap}}
         json[r'{{baseName}}'] = Map.fromIterables({{{name}}}{{#nullSafe}}!{{/nullSafe}}.keys,
@@ -107,16 +99,16 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       {{/isMap}}
       {{^items}}
         {{#isDateTime}}
-          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}.toUtc().toIso8601String();
+          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.toUtc().toIso8601String();
         {{/isDateTime}}
         {{#isDate}}
-          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}.toDateString();
+          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.toDateString();
         {{/isDate}}
         {{#isEnum}}
-          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}.toJson();
+          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.toJson();
         {{/isEnum}}
         {{#isModel}}
-          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{^required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}.toJson();
+          json[r'{{baseName}}'] = {{{name}}}{{^nullSafe}}?{{/nullSafe}}{{#isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}.toJson();
         {{/isModel}}
         {{#isPrimitiveType}}
           json[r'{{baseName}}'] = {{{name}}};
@@ -125,25 +117,23 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
           json[r'{{baseName}}'] = {{{name}}};
         {{/isAnyType}}
       {{/items}}
-      {{^required}}
-    } {{#generateNullValuesToJson}}else {
+    {{#x-dont-tojson-null}} } {{#generateNullValuesToJson}} else {
     json[r'{{baseName}}'] = null;
-    }{{/generateNullValuesToJson}}
-        {{/required}}
+    }{{/generateNullValuesToJson}}{{/x-dont-tojson-null}}
       {{/vendorExtensions.x-dart-inherited}}
       {{/vendorExtensions.x-var-is-binary}}
     {{/vars}}
     return json;
   }
 {{/hasVars}}
-  static List<{{classname}}> listFromJson(List<dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
-    return json == null ? <{{classname}}>[] : json.map((value) => {{classname}}.fromJson(value)).toList();
+  static List<{{{classname}}}> listFromJson(List<dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
+    return json == null ? <{{{classname}}}>[] : json.map((value) => {{{classname}}}.fromJson(value)).toList();
   }
 
-  static Map<String, {{classname}}> mapFromJson(Map<String, dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
-    final map = <String, {{classname}}>{};
+  static Map<String, {{{classname}}}> mapFromJson(Map<String, dynamic>{{#nullSafe}}?{{/nullSafe}} json) {
+    final map = <String, {{{classname}}}>{};
     if (json != null && json.isNotEmpty) {
-      json.forEach((String key, dynamic value) => map[key] = {{classname}}.fromJson(value));
+      json.forEach((String key, dynamic value) => map[key] = {{{classname}}}.fromJson(value));
     }
     return map;
   }
@@ -154,11 +144,8 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       return true;
     }
 
-    if (__other is {{classname}} && runtimeType == __other.runtimeType) {
+    if (__other is {{{classname}}} && runtimeType == __other.runtimeType) {
 
-  /*
-   this should be here {{{vendorExtensions.x-dart-ownVars}}}
-  */
   {{#hasVars}}return {{#vendorExtensions.x-dart-ownVars}}
     {{#complexType}}
       {{#isArray}}
@@ -204,9 +191,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
         {{/vendorExtensions.x-ns-default-val}}
         {{^vendorExtensions.x-ns-default-val}}
           {{#nullSafe}}
-          {{^required}}
+          {{#isNullable}}
           if ({{{name}}} != null) {
-          {{/required}}
+          {{/isNullable}}
           {{/nullSafe}}
         {{/vendorExtensions.x-ns-default-val}}
       {{#isArray}}
@@ -223,9 +210,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
       {{/vendorExtensions.x-ns-default-val}}
       {{^vendorExtensions.x-ns-default-val}}
         {{#nullSafe}}
-          {{^required}}
+          {{#isNullable}}
             }
-          {{/required}}
+          {{/isNullable}}
         {{/nullSafe}}
       {{/vendorExtensions.x-ns-default-val}}
 
@@ -235,9 +222,9 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
   }
 
   {{^disableCopyWith}}
-  {{classname}} copyWith({{#hasVars}}{
+    {{{classname}}} copyWith({{#hasVars}}{
      {{#vars}}
-         {{{dataType}}}{{#required}}{{#nullSafe}}?{{/nullSafe}}{{/required}}{{^required}}{{#vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/required}} {{{name}}},
+         {{{dataType}}}{{^isNullable}}{{#nullSafe}}?{{/nullSafe}}{{/isNullable}}{{#isNullable}}{{#vendorExtensions.x-ns-default-val}}?{{/vendorExtensions.x-ns-default-val}}{{/isNullable}} {{{name}}},
      {{/vars}}
     }{{/hasVars}}) {
 
@@ -247,17 +234,17 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
 
   {{#vars}}
   {{#nullSafe}}
-  {{#required}}
+  {{^isNullable}}
     {{#isArray}}{{>_complex_copy_required}}{{/isArray}}{{#isMap}}{{>_complex_copy_required}}{{/isMap}}{{^items}}final _copy_{{{name}}} = {{^isModel}}{{{name}}}{{/isModel}}{{#isModel}}{{{name}}}.copyWith(){{/isModel}};{{/items}}
-  {{/required}}
-  {{^required}}
+  {{/isNullable}}
+  {{#isNullable}}
     {{#vendorExtensions.x-ns-default-val}}
       {{#isArray}}{{>_complex_copy_required}}{{/isArray}}{{#isMap}}{{>_complex_copy_required}}{{/isMap}}{{^items}}final _copy_{{{name}}} = {{^isModel}}{{{name}}}{{/isModel}}{{#isModel}}{{{name}}}.copyWith(){{/isModel}};{{/items}}
     {{/vendorExtensions.x-ns-default-val}}
     {{^vendorExtensions.x-ns-default-val}}
       {{#isArray}}{{>_complex_copy}}{{/isArray}}{{#isMap}}{{>_complex_copy}}{{/isMap}}{{^items}}final _copy_{{{name}}} = {{^isModel}}{{{name}}}{{/isModel}}{{#isModel}}{{{name}}}?.copyWith(){{/isModel}};{{/items}}
     {{/vendorExtensions.x-ns-default-val}}
-  {{/required}}
+  {{/isNullable}}
   {{/nullSafe}}
   {{^nullSafe}}
     {{#isArray}}{{>_complex_copy}}{{/isArray}}{{#isMap}}{{>_complex_copy}}{{/isMap}}{{^items}}final _copy_{{{name}}} = {{^isModel}}{{{name}}}{{/isModel}}{{#isModel}}{{{name}}}?.copyWith(){{/isModel}};{{/items}}
@@ -275,7 +262,7 @@ class {{classname}}{{#parent}} extends {{parent}}{{/parent}} {
     {{^complexType}}
       {{^min}}
         {{#allowableValues}}
-           // Inline used enum: {{classname}} {{{name}}}
+           // Inline used enum: {{{classname}}} {{{name}}}
           enum {{{enumName}}} { {{#enumVars}}{{{name}}}{{^-last}}, {{/-last}}{{/enumVars}} }
 
           extension {{{enumName}}}Extension on {{{enumName}}} {
