--- a/src/main/resources/dart2-v3template/_complex_from_json_required.mustache
+++ b/src/main/resources/dart2-v3template/_complex_from_json_required.mustache
@@ -1,4 +1,2 @@
-{
-{{name}} = (_jsonData == null) ? {{#isArray}}[]{{/isArray}}{{#isMap}}{}{{/isMap}} : ((dynamic data) { return {{>_from_json}}; }(_jsonData));
-} // _jsonFieldName
+return (_jsonData == null) ? {{#isArray}}[]{{/isArray}}{{#isMap}}{}{{/isMap}} : ((dynamic data) { return {{>_from_json}}; }(_jsonData));
 
